[package]
name = "logitech-led-sys"
version = "1.0.0"
authors = ["Henning Ottesen <henning@live.no>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/henninglive/logitech-led/tree/master/logitech-led-sys"
homepage = "https://github.com/henninglive/logitech-led/tree/master/logitech-led-sys"
documentation = "https://docs.rs/logitech-led-sys/"
description = "FFI bindings and loader for the Logitech LED SDK."

[dependencies]
bitflags = "1.0"

[target.'cfg(windows)'.dependencies]
winapi = "0.2"
kernel32-sys = "0.2"
winreg = "0.4"
